RESOLVED FIXED 140863
Setting HTMLMarqueeElement.trueSpeed doesn't work
https://bugs.webkit.org/show_bug.cgi?id=140863
Summary Setting HTMLMarqueeElement.trueSpeed doesn't work
Alexey Proskuryakov
Reported 2015-01-25 00:50:36 PST
HTMLMarqueeElement.trueSpeed is a boolean property, so setting it it to true sets an empty value. void Element::setBooleanAttribute(const QualifiedName& name, bool value) { if (value) setAttribute(name, emptyAtom); else removeAttribute(name); } But then HTMLMarqueeElement::minimumDelay() treats an empty value as false.
Attachments
proposed fix (3.74 KB, patch)
2015-01-25 09:53 PST, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2015-01-25 09:53:15 PST
Created attachment 245308 [details] proposed fix
WebKit Commit Bot
Comment 2 2015-01-25 20:04:56 PST
Comment on attachment 245308 [details] proposed fix Clearing flags on attachment: 245308 Committed r179102: <http://trac.webkit.org/changeset/179102>
WebKit Commit Bot
Comment 3 2015-01-25 20:05:02 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.