Setting HTMLMarqueeElement.trueSpeed doesn't work https://bugs.webkit.org/show_bug.cgi?id=140863

Reviewed by Darin Adler.

Source/WebCore:

Test: fast/html/marquee-set-truespeed.html

* html/HTMLMarqueeElement.cpp: (WebCore::HTMLMarqueeElement::minimumDelay):
Check the boolean attribute properly - an empty value is true.

LayoutTests:

Verify that setting scrollDelay to a value under 60 actually works when trueSpeed is set.

* fast/html/marquee-set-truespeed-expected.html: Added.
* fast/html/marquee-set-truespeed.html: Added.


Canonical link: https://commits.webkit.org/158862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179102 268f45cc-cd09-0410-ab3c-d52691b4dbfc